# cwe_checker

./: Cargo.toml  README.md
src/: config.json  lib.rs
src/kernel/: checkers.rs  mod.rs
src/kernel/abstract_domain/: bitvector.rs  data.rs  identifier.rs  interval.rs  mem_region.rs  mod.rs
src/kernel/abstract_domain/data/: arithmetics.rs  conditional_specialization.rs  trait_impl.rs
src/kernel/abstract_domain/interval/: simple_interval.rs
src/kernel/analysis/: forward_interprocedural_fixpoint.rs  graph.rs  interprocedural_fixpoint_generic.rs
src/kernel/analysis/backward_interprocedural_fixpoint/: mock_context.rs  mod.rs  tests.rs
src/kernel/analysis/dead_variable_elimination/: alive_vars_computation.rs  mod.rs
src/kernel/analysis/pointer_inference/: mod.rs  object.rs  object_list.rs  statistics.rs
src/kernel/checkers/: cwe_134.rs  cwe_190.rs  cwe_215.rs  cwe_243.rs  cwe_332.rs  cwe_367.rs  cwe_426.rs  cwe_467.rs  cwe_476.rs  cwe_560.rs  cwe_676.rs  cwe_78.rs  cwe_782.rs
src/kernel/checkers/cwe_476/: context.rs  state.rs  taint.rs
src/kernel/intermediate_representation/: bitvector.rs  blk.rs  def.rs  expression.rs  jmp.rs  mod.rs  program.rs  project.rs  sub.rs  term.rs  variable.rs
src/kernel/intermediate_representation/expression/: trivial_operation_substitution.rs
src/kernel/intermediate_representation/term/: builder.rs
src/kernel/pcode/: expressions.rs  mod.rs  term.rs
src/kernel/pcode/term/: tests.rs
src/kernel/utils/: arguments.rs  binary.rs  graph_utils.rs  log.rs  mod.rs  symbol_utils.rs
src/kernel/utils/arguments/: tests.rs
(+12 files in other folders)
