[lib]
crate-type = ["dylib"]

[package]
name = "cwe_checker_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.3"
serde_json = "1.0"
directories = "3.0"
nix = "0.19.1"
apint = "0.2"
regex = "1.4.5"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_yaml = "0.8"
petgraph = { version = "0.5", features = ["default", "serde-1"] }
fnv = "1.0" # a faster hash function for small keys like integers
anyhow = "1.0" # for easy error types
crossbeam-channel = "0.4"
derive_more = "0.99"
goblin = "0.2"
gcd = "2.0"